deploy/k8s/ingest-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-ingest-service
  namespace: flag-system
  labels:
    app: flag-ingest-service
    tier: data-plane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-ingest-service
  template:
    metadata:
      labels:
        app: flag-ingest-service
        tier: data-plane
    spec:
      containers:
        - name: ingest-service
          image: docker-flag-ingest-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 40
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: "256m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: flag-ingest-service
  namespace: flag-system
  labels:
    app: flag-ingest-service
spec:
  type: NodePort
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30082
      protocol: TCP
      name: http
  selector:
    app: flag-ingest-service
